--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ MONGO_DB_PASSWORD=nigga
 MONGO_DB_DATABASE=ecommerce
 JWT_SECRET=MONGSECRET
 API=http://localhost:2000
+/src/uploads/*
+!/src/uploads/ .gitkeep
